--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-owl-carousel": "^2.3.3",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
